--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: tda123123/tda_dynamo_web_app:$GITHUB_REF_NAME
+          tags: tda123123/tda_dynamo_web_app:${{ env.GITHUB_REF_NAME }}
