--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 /target/
 /.idea/
 .DS_Store
+
+
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
